# flow

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: commands.rs  events.rs  lib.rs  state.rs
crates/core/src/workspace/: attention.rs  git.rs  mod.rs  ssh.rs  terminal.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: http.rs  lib.rs  main.rs  state_bridge.rs  ws.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  keymap.rs  main.rs
crates/tui/src/ui/: footer.rs
crates/tui/src/ui/screens/: home.rs  mod.rs  workspace.rs
crates/tui/src/ui/widgets/: diff_view.rs  git_files.rs  mod.rs  terminal_pane.rs  tile_grid.rs
web/: app.js  index.html
