[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
anvl_core = { path = "../core" }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.22"
